# asset_parser

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: arms-asset-type-ids.txt  main.rs  units.txt
