[package]
name = "asset_parser"
version = "1.3.0"
authors = ["Anthony Mackay <amk@gegroup.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"